force-app/main/default/objects/FPSA_LC_Scoring__mdt/FPSA_LC_Scoring__mdt.object-meta.xml
<CustomObject>
    <label>LC Scoring</label>
    <pluralLabel>LC Scoring</pluralLabel>
</CustomObject>