force-app/main/default/objects/FPSA_LC_Scoring__mdt/fields/CAS_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>CAS_Call_Status__c</fullName>
    <label>CAS Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Responded</fullName>
                <default>true</default>
                <label>Call Responded</label>
            </value>
            <value>
                <fullName>DNC Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>