force-app/main/default/objects/FPSA_LC_Scoring__mdt/fields/LC_Score__c.field-meta.xml
<CustomField>
    <fullName>LC_Score__c</fullName>
    <label>LC Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>