force-app/main/default/objects/FPSA_LC_Scoring__mdt/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <label>Task Subject</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>