force-app/main/default/objects/FPSA_LC_Scoring__mdt/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mailchimp</fullName>
                <default>true</default>
                <label>Mailchimp</label>
            </value>
            <value>
                <fullName>Connect and Sell Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>